--- a/webpack/package.json
+++ b/webpack/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^9.5.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
+    "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
@@ -23,6 +24,8 @@
     "html-withimg-loader": "^0.1.16",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
