--- a/vuemyapp/package.json
+++ b/vuemyapp/package.json
@@ -12,6 +12,7 @@
     "vue-aplayer": "^1.6.1",
     "vue-router": "^3.0.3",
     "vue-swipe": "^2.4.0",
+    "vue-touch": "^1.1.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
