--- a/antd-demo/package.json
+++ b/antd-demo/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "antd": "^3.18.2",
+    "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.2",
     "customize-cra": "^0.2.12",
+    "mockjs": "^1.0.1-beta3",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
