--- a/初步node/node项目2/myapp/package.json
+++ b/初步node/node项目2/myapp/package.json
@@ -9,6 +9,7 @@
     "acl": "^0.4.11",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^1.3.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
