--- a/初步node/node项目2/myapp/package.json
+++ b/初步node/node项目2/myapp/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "acl": "^0.4.11",
+    "axios": "^0.19.0",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
